@fix added fix for overflow

--- a/src/news-roller/news-roller.css
+++ b/src/news-roller/news-roller.css
@@ -75,7 +75,8 @@
 {
     position: relative;
     height: 100%;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 #screens_container ::slotted(*)
 {
